--- a/package.json
+++ b/package.json
@@ -29,22 +29,23 @@
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.8.2",
     "del": "^2.2.2",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.0",
     "gulp-flatten": "0.3.1",
     "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.0.3",
+    "gulp-imagemin": "^3.2.0",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-rev": "^7.1.2",
-    "gulp-sass": "^2.0.1",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^2.0.0",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^2.1.2",
     "imagemin-pngcrush": "^5.0.0",
     "jshint": "^2.9.3",
     "jshint-stylish": "^2.0.1",
